@@ -1,4 +1,5 @@
 0.2.0
+Added date reminder file to calendar (~/.config/LFS/calendardates).
 Added calendar widget.
 Fixed updating window names in task lists.
 Fixed task bar icons changing position.
